Task: Tune margin to prevent cutoff

--- a/src/Jimdo/JimFlow/PrintTicketBundle/Resources/public/css/templates/story/print.css
+++ b/src/Jimdo/JimFlow/PrintTicketBundle/Resources/public/css/templates/story/print.css
@@ -9,7 +9,6 @@ body {
 }
 
 #card {
-    margin-top: 4mm;
     margin-left: 4mm;
     position: relative;
     width: 133mm;
