--- a/src/Jimdo/JimFlow/PrintTicketBundle/Resources/public/css/templates/ticket/print.css
+++ b/src/Jimdo/JimFlow/PrintTicketBundle/Resources/public/css/templates/ticket/print.css
@@ -14,7 +14,6 @@ p {
 }
 
 #card {
-    margin-top : 4mm;
     margin-left: 4mm;
     position: relative;
     width: 133mm;
